harness/test/errors/002_lists.eu
#!/usr/bin/env eu

x: [] __HEAD
